--- a/LDF FILES/TRAINING.html
+++ b/LDF FILES/TRAINING.html
@@ -5,22 +5,22 @@
 	   <link rel = "stylesheet" type = "text/css" href = "HR style.css">
    </head>
    <body>
-      <marquee><h1><font color="red"> ALL EMPLOYEE ACADEMIC QUALIFICATION </h1></marquee></font>
+    <h1><font color="red"> ALL EMPLOYEE TRAINING DETAILS </h1></font>
 		<div class="hr">
-		<H3> ACADEMIC QUALIFICATIONS </H3>
-			<form action="QUALIFICATIONS.php" method="Post">
+			<h3>TRAINING DETAILS</h3>
+			<form action="TRAINING.php" method="Post">
                 <table>
 					<tr>
 				        <td>Force_NO</td>
                         <td><input type="text" name="FORCE_NO" placeholder="force number"></td>
 					</tr>
 					<tr>
-                        <td>QUALIFICATION OBTAINED</td>
-                        <td><input type="text" name="QUALIFICATION_OBTAINED" placeholder="qualification ofbtained"></td>
+                        <td>Courses/Seminars</td>
+                        <td><input type="text" name="COURSES_OR_SEMINARS" placeholder="Courses and/or Seminars"></td>
 					</tr>
 					<tr>
                         <td>INSTITUTION</td>
-                        <td><input type="text" name="INSTITUTION" placeholder="name of institution"></td>					
+                        <td><input type="text" name="INSTITUTION" placeholder="institutions "></td>					
                     </tr>
                    
                     <tr>
@@ -28,11 +28,11 @@
                         <td><input type="text" name="COUNTRY" placeholder="country"></td>
 					</tr>
 					<tr>
-                        <td>YEAR OBTAINED</td>
-                        <td><input type="text" name=" YEAR_OBTAINED" placeholder="year obtained"></td>
+                        <td>Dates</td>
+                        <td><input type="text" name="DATES" placeholder="dates"></td>
                      </tr> 					 
                      <tr>
-                         <td><input type="submit" name="submit" value="next"></td>
+                         <td><input type="submit" name="submit" value="submit"></td>
                          <td><input type="reset" name="cancel" value="cancel"></td>
                      </tr>
                 </table>
