--- a/LDF FILES/PROFESSIONAL.html
+++ b/LDF FILES/PROFESSIONAL.html
@@ -5,22 +5,22 @@
 	   <link rel = "stylesheet" type = "text/css" href = "HR style.css">
    </head>
    <body>
-      <marquee><h1><font color="red"> ALL EMPLOYEE ACADEMIC QUALIFICATION </h1></marquee></font>
+      <h1><font color="red"> IF NO PROFESSIONAL QUALIFICATIONS CLICK NEXT TO CONTINUE ...  </h1></font>
 		<div class="hr">
-		<H3> ACADEMIC QUALIFICATIONS </H3>
-			<form action="QUALIFICATIONS.php" method="Post">
+		<H3>PROFESSIONAL QUALIFICATIONS </H3>
+			<form action="PROFESSIONAL.php" method="Post">
                 <table>
 					<tr>
 				        <td>Force_NO</td>
                         <td><input type="text" name="FORCE_NO" placeholder="force number"></td>
 					</tr>
 					<tr>
-                        <td>QUALIFICATION OBTAINED</td>
-                        <td><input type="text" name="QUALIFICATION_OBTAINED" placeholder="qualification ofbtained"></td>
+                        <td>PROFESSIONAL QUALIFICATION</td>
+                        <td><input type="text" name="PROFESSIONAL_QUALIFICATION" placeholder="professional qualification"></td>
 					</tr>
 					<tr>
                         <td>INSTITUTION</td>
-                        <td><input type="text" name="INSTITUTION" placeholder="name of institution"></td>					
+                        <td><input type="text" name="INSTITUTION" placeholder="institution"></td>					
                     </tr>
                    
                     <tr>
@@ -29,7 +29,7 @@
 					</tr>
 					<tr>
                         <td>YEAR OBTAINED</td>
-                        <td><input type="text" name=" YEAR_OBTAINED" placeholder="year obtained"></td>
+                        <td><input type="text" name="YEAR_OBTAINED" placeholder="Year obtained"></td>
                      </tr> 					 
                      <tr>
                          <td><input type="submit" name="submit" value="next"></td>
